# upstats

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  package.json  pnpm-lock.yaml  svelte.config.js  wrangler.toml
backend/: Dockerfile  choices.py  cron.py  database.py  deesh_user.pem  fly.toml  main.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6a9b17eaf274_remove_the_unused_column.py  7aeec7a6f3ef_create_new_tables_for_storing_stats_and_.py  9784acb7fafb_base_migration_file.py  b38b092c0665_marking_rid_as_unique_and_updating_index.py  beee9ddc708e_migration_for_triggers.py  e3f4dc0e020b_adding_the_lastest_events.py  e9d7493c8df9_basic_commit_after_all.py
src/: app.css
src/lib/: utils.ts
src/lib/components/ui/command/: command-input.svelte
src/routes/: +layout.svelte  +page.server.ts  +page.svelte  constants.ts
src/routes/monitors/[mid]/: +page.server.ts  +page.svelte
src/routes/monitors/[mid]/configure/: +page.server.ts  +page.svelte  config-form.svelte  schema.ts
